--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="section-title">
                     <span>About Me</span>
                     <h2>About Me</h2>
-                    <p>Talented individual with information technology background, strong desire to grow technical skills, and ability to learn new technologies swiftly. Hopeful for a Cyber Security/ IT support position coming with internship experience,
+                    <p>Talented individual with information technology (IT) background, strong desire to grow technical skills, and ability to learn new technologies swiftly. Hopeful for a Cyber Security/ IT support position coming with internship experience,
                         great communication skills, and proficiency in all Microsoft Office tools, as well as high attention to detail.</p>
                 </div>
 
